--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
 # Local .terraform directories
 **/.terraform/*
 
+.terraform.lock.hcl
+*.plan
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
+#provider
+provider.tf
+
+#backend
+backend.tf
 
 # Crash log files
 crash.log
@@ -13,8 +22,8 @@ crash.*.log
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
 # to change depending on the environment.
-*.tfvars
-*.tfvars.json
+# *.tfvars
+# *.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
