--- a/.github/actions/terraform-apply/action.yaml
+++ b/.github/actions/terraform-apply/action.yaml
@@ -1,5 +1,5 @@
-name: 'Terraform Plan'
-description: "Performs the terraform plan"
+name: 'Terraform Apply'
+description: "Performs the terraform apply"
 
 inputs:
   AZURE_CLI_VERSION:
@@ -50,91 +50,20 @@ runs:
           --container-name plans
           tar -xvf terraform-live.tar -C terraform-live
 
-          ls -ltr
-
-    - name: Copy ${{ inputs.STAGE }} live plan from Storage
+    - name: Copy ${{ inputs.STAGE }} modules from Storage
       uses: azure/CLI@v1
       with:
         azcliversion: ${{ inputs.AZURE_CLI_VERSION }}
         inlineScript: |
-          ls -ltr
-        working-directory: ${{ inputs.WORKING_DIR }}/terraform-live
+          az storage blob download \
+          --file terraform-modules.tar \
+          --name terraform-modules-${{ inputs.STAGE }}-${{ github.run_number }}.tar \
+          --account-name ${{ inputs.STORAGE_ACCOUNT_NAME }} \
+          --container-name plans
+          tar -xvf terraform-modules.tar -C terraform-modules
 
-    # - name: Terraform fmt
-    #   id: fmt
-    #   run: terraform fmt -check -recursive -diff ${{ inputs.WORKING_DIR}}
-    #   continue-on-error: true
-    #   shell: bash
-    #   working-directory: ${{ inputs.WORKING_DIR }}/terraform-live
-
-    # - name: Ensure ${{ inputs.STAGE }}.tfvars exists
-    #   shell: bash
-    #   run: |
-    #     touch ${{ inputs.WORKING_DIR }}/terraform-live/${{ inputs.STAGE }}.tfvars
-
-    # - name: Create backend file
-    #   shell: pwsh
-    #   run: |
-    #     New-Item -Path "${{ inputs.WORKING_DIR }}/terraform-live" -Name "backend.tf" -Value "terraform {`r`nbackend `"azurerm`" {`r`nresource_group_name = `"${{ inputs.RESOURCE_GROUP_NAME }}`"`r`nstorage_account_name = `"${{ inputs.STORAGE_ACCOUNT_NAME }}`"`r`ncontainer_name = `"${{ inputs.CONTAINER_NAME }}`"`r`nkey = `"${{ inputs.STATE_FILE }}`"`r`n}`r`n}`r`n"
-
-    # - name: Create Provider file
-    #   shell: pwsh
-    #   run: |
-    #     New-Item -Path "${{ inputs.WORKING_DIR }}/terraform-live" -Name "azurerm_provider.tf" -Value "provider `"azurerm`"{`r`nskip_provider_registration = true`r`nfeatures {}`r`n}"
-
-    # - name: Terraform Init
-    #   id: init
-    #   run: terraform init -reconfigure
-    #   shell: bash
-    #   working-directory: ${{ inputs.WORKING_DIR }}/terraform-live
-
-    # - name: Terraform Plan
-    #   id: plan
-    #   run: terraform plan -var-file="${{ inputs.STAGE }}.tfvars" -lock-timeout=10m -out=${{ inputs.STAGE }}.plan
-    #   continue-on-error: false
-    #   shell: bash
-    #   working-directory: ${{ inputs.WORKING_DIR }}/terraform-live
-
-    # - name: Archive terraform-live and plan
-    #   uses: a7ul/tar-action@v1.1.0
-    #   id: compress-terraform-live
-    #   with:
-    #     command: c
-    #     cwd: ${{ inputs.WORKING_DIR }}
-    #     files: |
-    #       ./terraform-live
-    #     outPath: terraform-live-${{ inputs.STAGE }}-${{ github.run_number }}.tar
-
-    # - name: Copy ${{ inputs.STAGE }} live plan to Storage
-    #   uses: azure/CLI@v1
-    #   with:
-    #     azcliversion: ${{ inputs.AZURE_CLI_VERSION }}
-    #     inlineScript: |
-    #       az storage blob download \
-    #       --file terraform-live.tar \
-    #       --name terraform-live-${{ inputs.STAGE }}-${{ github.run_number }}.tar \
-    #       --account-name ${{ inputs.STORAGE_ACCOUNT_NAME }} \
-    #       --container-name plans
-    #       tar -xvf terraform-live.tar -C terraform-live
-    #       ls -ltr
-
-    # - name: Archive terraform-modules
-    #   uses: a7ul/tar-action@v1.1.0
-    #   id: compress-terraform-modules
-    #   with:
-    #     command: c
-    #     cwd: ${{ inputs.WORKING_DIR }}
-    #     files: |
-    #       ./terraform-modules
-    #     outPath: terraform-modules-${{ inputs.STAGE }}-${{ github.run_number }}.tar
-
-    # - name: Copy ${{ inputs.STAGE }} modules to Storage
-    #   uses: azure/CLI@v1
-    #   with:
-    #     azcliversion: ${{ inputs.AZURE_CLI_VERSION }}
-    #     inlineScript: |
-    #       az storage blob upload \
-    #         --container-name plans \
-    #         --file terraform-modules-${{ inputs.STAGE }}-${{ github.run_number }}.tar \
-    #         --name terraform-modules-${{ inputs.STAGE }}-${{ github.run_number }}.tar \
-    #         --account-name ${{ inputs.STORAGE_ACCOUNT_NAME }}
+    - name: Terraform Apply
+      shell: bash
+      run:
+        terraform apply -lock-timeout=10m "${{ inputs.STAGE }}.plan"
+      working-directory: ${{ inputs.WORKING_DIR }}/terraform-live
