--- a/.github/actions/terraform-apply/action.yaml
+++ b/.github/actions/terraform-apply/action.yaml
@@ -43,13 +43,12 @@ runs:
       with:
         azcliversion: ${{ inputs.AZURE_CLI_VERSION }}
         inlineScript: |
-          mkdir apply
           az storage blob download \
           --file terraform-live.tar \
           --name terraform-live-${{ inputs.STAGE }}-${{ github.run_number }}.tar \
           --account-name ${{ inputs.STORAGE_ACCOUNT_NAME }} \
           --container-name plans
-          tar -xvf terraform-live.tar -C ./apply/terraform-live
+          tar -xvf terraform-live.tar -C ./
 
     - name: Copy ${{ inputs.STAGE }} modules from Storage
       uses: azure/CLI@v1
@@ -61,7 +60,7 @@ runs:
           --name terraform-modules-${{ inputs.STAGE }}-${{ github.run_number }}.tar \
           --account-name ${{ inputs.STORAGE_ACCOUNT_NAME }} \
           --container-name plans
-          tar -xvf terraform-modules.tar -C ./apply/terraform-modules
+          tar -xvf terraform-modules.tar -C ./
 
     - name: map dir
       shell: bash
@@ -73,10 +72,4 @@ runs:
       shell: bash
       run:
         ls -ltr
-      working-directory: ${{ inputs.WORKING_DIR }}/apply
-
-    - name: map dir
-      shell: bash
-      run:
-        ls -ltr
-      working-directory: ${{ inputs.WORKING_DIR }}/apply/terraform-live
+      working-directory: ${{ inputs.WORKING_DIR }}/terraform-live
