--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -25,14 +25,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: tfsec
-        shell: bash
-        run: |
-          mkdir TFSecReport
-          docker pull aquasec/tfsec:latest
-          docker run --rm -v ./terraform-live:/src aquasec/tfsec ./src --format JUnit > ./TFSecReport/TFSec-Report.xml
-          docker run --rm -v ./terraform-live:/src aquasec/tfsec ./src
+        uses: aquasecurity/tfsec-pr-commenter-action@v1.2.0
+        with:
+          github_token: ${{ github.token }}
+          working-directory: ./terraform-live
 
   plan:
+    needs: audit
     strategy:
       matrix:
         stage: [dev]
