--- a/policy/Diagnostic_Settings_Key_Vaults.json
+++ b/policy/Diagnostic_Settings_Key_Vaults.json
@@ -87,7 +87,7 @@
               },
               {
                 "field": "Microsoft.Insights/diagnosticSettings/workspaceId",
-                "equals": "[resourceId('Microsoft.OperationalInsights/workspaces', concat(parameters('logAnalytics'), '-', parameters('environment')))]"
+                "equals": "[parameters('logAnalyticsId')]"
               }
             ]
           },
@@ -180,6 +180,9 @@
                 },
                 "logAnalytics": {
                   "value": "[parameters('logAnalytics')]"
+                },
+                "logAnalyticsId": {
+                  "value": "[resourceId('Microsoft.OperationalInsights/workspaces', concat(parameters('logAnalytics'), '-', parameters('environment')))]"
                 },
                 "metricsEnabled": {
                   "value": "[parameters('metricsEnabled')]"
