--- a/.github/actions/terraform-plan/action.yaml
+++ b/.github/actions/terraform-plan/action.yaml
@@ -73,6 +73,13 @@ runs:
       shell: bash
       working-directory: ${{ inputs.WORKING_DIR }}/terraform-live
 
+    - name: TfSec on modules
+      shell: bash
+      run: |
+        docker pull aquasec/tfsec:latest
+        docker run --rm -v "$(pwd)/terraform-live/.terraform/modules/def_assignment:/src" aquasec/tfsec ./src
+        docker rmi "aquasec/tfsec:latest" -f | true
+
     - name: Archive terraform-live and plan
       uses: a7ul/tar-action@v1.1.0
       id: compress-terraform-live
