--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v3
 
-      - name: tfsec
-        uses: aquasecurity/tfsec-pr-commenter-action@v1.2.0
-        with:
-          github_token: ${{ github.token }}
-          working-directory: ./terraform-live
+      - name: TfSec on terraform-live
+        run: |
+          docker pull aquasec/tfsec:latest
+          docker run --rm -v "$(pwd)/terraform-live:/src" aquasec/tfsec ./src
+          docker rmi "aquasec/tfsec:latest" -f | true
 
   plan:
     needs: audit
