Added need of infracost

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -105,7 +105,7 @@ jobs:
                                      --behavior=update
 
   plan:
-    needs: audit
+    needs: [audit, infracost]
     strategy:
       matrix:
         stage: [dev]
