Added check into terraform-files

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -14,6 +14,35 @@ env:
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
 jobs:
+  check:
+    name: Check modified files
+    outputs:
+      run_job: ${{ steps.check_files.outputs.run_job }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+      - name: check modified files
+        id: check_files
+        run: |
+          echo "=============== list modified files ==============="
+          git diff --name-only HEAD^ HEAD
+
+          echo "========== check paths of modified files =========="
+          git diff --name-only HEAD^ HEAD &gt; files.txt
+          while IFS= read -r file
+          do
+            echo $file
+            if [[ $file != terraform-live/* ]]; then
+              echo "This modified file is not under the 'terraform-live' folder."
+              echo "::set-output name=run_job::false"
+              break
+            else
+              echo "::set-output name=run_job::true"
+            fi
+          done &lt; files.txt
   audit:
     runs-on: ubuntu-latest
     permissions:
@@ -105,7 +134,9 @@ jobs:
                                      --behavior=update
 
   plan:
-    needs: [audit, infracost]
+    name: "Plan Job"
+    needs: [audit, infracost, check]
+    if: needs.check.outputs.run_job == 'true'
     strategy:
       matrix:
         stage: [dev]
@@ -144,6 +175,7 @@ jobs:
         STAGE: "${{ matrix.stage }}"
 
   apply:
+    name: "Apply Job"
     needs: plan
     strategy:
       matrix:
