--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -1,10 +1,18 @@
 
 name: 'Terraform Deploy'
 on:
+  workflow_run:
+    workflows: ["Audit Terraform"]
+    branches: [main]
+    types:
+      - completed
   push:
     branches:
       - main
-  pull_request:
+    paths:
+      - 'terraform-live/**'
+      - 'terraform-modules/**'
+      - 'policies/**'
   workflow_dispatch:
 
 env:
@@ -31,105 +39,16 @@ jobs:
         $diff = git diff --name-only HEAD^ HEAD
 
         # Check if a file under terraform-live/ or with the .md extension has changed (added, modified, deleted)
-        $SourceDiff = $diff | Where-Object { $_ -match '^terraform-live/' -or $_ -match '.md$' }
+        $SourceDiff = $diff | Where-Object { $_ -match '^terraform-live/' -or $_ -match '.md$' -or $_ -match '^terraform-modules/' -or $_ -match '^policies/'}
         $HasDiff = $SourceDiff.Length -gt 0
 
         # Set the output named "docs_changed"
         Write-Host "::set-output name=run_job::$HasDiff"
-  audit:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-
-    steps:
-      - name: Clone repo
-        uses: actions/checkout@v3
-
-      - name: TfSec on terraform-live
-        run: |
-          docker pull aquasec/tfsec:latest
-          docker run --rm -v "$(pwd)/terraform-live:/src" aquasec/tfsec ./src
-          docker rmi "aquasec/tfsec:latest" -f | true
-
-  infracost:
-    name: Infracost
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      # Required to post comments
-      pull-requests: write
-
-    env:
-      TF_ROOT: ./terraform-live
-      # If you're using Terraform Cloud/Enterprise and have variables or private modules stored
-      # on there, specify the following to automatically retrieve the variables:
-      #   INFRACOST_TERRAFORM_CLOUD_TOKEN: ${{ secrets.TFC_TOKEN }}
-      #   INFRACOST_TERRAFORM_CLOUD_HOST: app.terraform.io # Change this if you're using Terraform Enterprise
-
-    steps:
-      # If you use private modules, add an environment variable or secret
-      # called GIT_SSH_KEY with your private key, so Infracost can access
-      # private repositories (similar to how Terraform/Terragrunt does).
-      # - name: add GIT_SSH_KEY
-      #   run: |
-      #     ssh-agent -a $SSH_AUTH_SOCK
-      #     mkdir -p ~/.ssh
-      #     echo "${{ secrets.GIT_SSH_KEY }}" | tr -d '\r' | ssh-add -
-      #     ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-      - name: Setup Infracost
-        uses: infracost/actions/setup@v2
-        # See https://github.com/infracost/actions/tree/master/setup for other inputs
-        # If you can't use this action, see Docker images in https://infracost.io/cicd
-        with:
-          api-key: ${{ secrets.INFRACOST_API_KEY }}
-
-      # Checkout the base branch of the pull request (e.g. main/master).
-      - name: Checkout base branch
-        uses: actions/checkout@v3
-        with:
-          ref: '${{ github.event.pull_request.base.ref }}'
-
-      # Generate Infracost JSON file as the baseline.
-      - name: Generate Infracost cost estimate baseline
-        run: |
-          infracost breakdown --path=${TF_ROOT} \
-                              --format=json \
-                              --out-file=/tmp/infracost-base.json
-
-      # Checkout the current PR branch so we can create a diff.
-      - name: Checkout PR branch
-        uses: actions/checkout@v3
-
-      # Generate an Infracost diff and save it to a JSON file.
-      - name: Generate Infracost diff
-        run: |
-          infracost diff --path=${TF_ROOT} \
-                          --format=json \
-                          --compare-to=/tmp/infracost-base.json \
-                          --out-file=/tmp/infracost.json
-
-      # Posts a comment to the PR using the 'update' behavior.
-      # This creates a single comment and updates it. The "quietest" option.
-      # The other valid behaviors are:
-      #   delete-and-new - Delete previous comments and create a new one.
-      #   hide-and-new - Minimize previous comments and create a new one.
-      #   new - Create a new cost estimate comment on every push.
-      # See https://www.infracost.io/docs/features/cli_commands/#comment-on-pull-requests for other options.
-      - name: Post Infracost comment
-        if: github.event_name == 'pull_request'
-        run: |
-            infracost comment github --path=/tmp/infracost.json \
-                                     --repo=$GITHUB_REPOSITORY \
-                                     --github-token=${{github.token}} \
-                                     --pull-request=${{github.event.pull_request.number}} \
-                                     --behavior=update
 
   plan:
     name: "Plan Job"
     needs: [audit, infracost, check]
-    if: needs.check.outputs.run_job == 'true'
+    if: needs.check.outputs.run_job == 'true' && ${{ github.event.workflow_run.conclusion == 'success' }}
     strategy:
       matrix:
         stage: [dev]
