--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -24,12 +24,13 @@ jobs:
       pull-requests: write
     uses: leomozzer/terraform-template/.github/workflows/terraform-deploy.yml@main
     with:
-      WORKING_DIR: "./terraform-live"
+      TERRAFORM_WORKING_DIR: "terraform-live"
     secrets:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
 
   # audit:
   #   runs-on: ubuntu-latest
