--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -8,6 +8,7 @@ on:
       - 'terraform-live/**'
       - 'terraform-modules/**'
       - 'policies/**'
+      - '.github/workflows/**'
   workflow_dispatch:
   pull_request:
 
@@ -25,8 +26,8 @@ jobs:
     uses: leomozzer/terraform-template/.github/workflows/audit.yml@main
     with:
       TERRAFORM_WORKING_DIR: "terraform-live"
-    # secrets:
-    #   INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
+    secrets:
+      INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
 
   plan:
     name: "Plan Job"
