--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -77,6 +77,7 @@ jobs:
       matrix:
         stage: [dev]
     runs-on: ubuntu-latest
+    environment: ${{ matrix.stage }}
     defaults:
      run:
        shell: bash
