--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -36,29 +36,27 @@ jobs:
     strategy:
       matrix:
         stage: [dev]
-    runs-on: ubuntu-latest
     concurrency: ${{ matrix.stage }}
-    steps:
-    - uses: actions/checkout@v3
+    # steps:
+    # - uses: actions/checkout@v3
 
-    - uses: jungwinter/split@v2
-      id: split
-      with:
-        msg: ${{ github.repository }}
-        separator: "/"
-
-    - uses: leomozzer/terraform-template/.github/workflows/terraform-plan.yml@main
-      with:
-        TERRAFORM_WORKING_DIR: "terraform-live"
-        TERRAFORM_MODULES_DIR: "terraform-modules"
-        WORKING_DIR: "./"
-        RESOURCE_GROUP_NAME: "policy-as-code-tfstate-${{ matrix.stage }}-rg"
-        STORAGE_ACCOUNT_NAME: "stacpolicyascode${{ matrix.stage }}"
-        CONTAINER_NAME: "states"
-        STATE_FILE: "policy-as-code.tfstate"
-        STAGE: ${{ matrix.stage }}
-        TAGS: '"UseCase=Terraform" "Stage=${{ github.job }}" "Deployed=GitHub Actions" Repository=${{ steps.split.outputs._1 }} "RunNumber=${{ github.run_number }}"'
-
+    # - uses: jungwinter/split@v2
+    #   id: split
+    #   with:
+    #     msg: ${{ github.repository }}
+    #     separator: "/"
+    uses: leomozzer/terraform-template/.github/workflows/terraform-plan.yml@main
+    with:
+      TERRAFORM_WORKING_DIR: "terraform-live"
+      TERRAFORM_MODULES_DIR: "terraform-modules"
+      WORKING_DIR: "./"
+      RESOURCE_GROUP_NAME: "policy-as-code-tfstate-${{ matrix.stage }}-rg"
+      STORAGE_ACCOUNT_NAME: "stacpolicyascode${{ matrix.stage }}"
+      CONTAINER_NAME: "states"
+      STATE_FILE: "policy-as-code.tfstate"
+      STAGE: ${{ matrix.stage }}
+      TAGS: '"UseCase=Terraform" "Environment=${{ matrix.stage }}" "Deployed=GitHub Actions" Repository="https://github.com/leomozzer/policy-as-code""RunNumber=${{ github.run_number }}"'
+    secrets: inherit
     # steps:
     # - uses: actions/checkout@v3
 
