--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -51,6 +51,7 @@ jobs:
       TERRAFORM_MODULES_DIR: "terraform-modules"
       WORKING_DIR: "./"
       RESOURCE_GROUP_NAME: "policy-as-code-tfstate-${{ matrix.stage }}-rg"
+      RESOURCE_GROUP_LOCATION: "eastus"
       STORAGE_ACCOUNT_NAME: "stacpolicyascode${{ matrix.stage }}"
       CONTAINER_NAME: "states"
       STATE_FILE: "policy-as-code.tfstate"
