--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -17,6 +17,12 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  PROJECT_NAME: "policy-as-code"
+  TERRAFORM_WORKING_DIR: "terraform-live"
+  TERRAFORM_MODULES_DIR: "terraform-modules"
+  RESOURCE_GROUP_LOCATION: "eastus"
+  STORAGE_ACCOUNT_NAME: "stacpolicyascode"
+
 
 jobs:
   audit:
@@ -39,16 +45,16 @@ jobs:
     concurrency: ${{ matrix.stage }}
     uses: leomozzer/terraform-template/.github/workflows/terraform-plan.yml@main
     with:
-      TERRAFORM_WORKING_DIR: "terraform-live"
-      TERRAFORM_MODULES_DIR: "terraform-modules"
+      TERRAFORM_WORKING_DIR: ${{ env.TERRAFORM_WORKING_DIR }}
+      TERRAFORM_MODULES_DIR: ${{ env.TERRAFORM_MODULES_DIR }}
       WORKING_DIR: "./"
-      RESOURCE_GROUP_NAME: "policy-as-code-tfstate-${{ matrix.stage }}-rg"
-      RESOURCE_GROUP_LOCATION: "eastus"
-      STORAGE_ACCOUNT_NAME: "stacpolicyascode${{ matrix.stage }}"
+      RESOURCE_GROUP_NAME: "${{ env.PROJECT_NAME }}-tfstate-${{ matrix.stage }}-rg"
+      RESOURCE_GROUP_LOCATION: ${{ env.RESOURCE_GROUP_LOCATION }}
+      STORAGE_ACCOUNT_NAME: "${{ env.STORAGE_ACCOUNT_NAME }}${{ matrix.stage }}"
       CONTAINER_NAME: "states"
-      STATE_FILE: "policy-as-code.tfstate"
+      STATE_FILE: "${{ env.PROJECT_NAME }}.tfstate"
       STAGE: ${{ matrix.stage }}
-      TAGS: '"UseCase=Terraform" "Environment=${{ matrix.stage }}" "Deployed=GitHub Actions" Repository="https://github.com/leomozzer/policy-as-code""RunNumber=${{ github.run_number }}"'
+      TAGS: '"UseCase=Terraform" "Environment=${{ matrix.stage }}" "Deployed=GitHub Actions" Repository="https://github.com/leomozzer/policy-as-code" "RunNumber=${{ github.run_number }}"'
     secrets:
       AZURE_SP: ${{ secrets.AZURE_SP }}
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
@@ -66,7 +72,7 @@ jobs:
     uses: leomozzer/terraform-template/.github/workflows/terraform-apply.yml@main
     with:
       WORKING_DIR: "./"
-      STORAGE_ACCOUNT_NAME: "stacpolicyascode${{ matrix.stage }}"
+      STORAGE_ACCOUNT_NAME: "${{ env.STORAGE_ACCOUNT_NAME }}${{ matrix.stage }}"
       CONTAINER_NAME: "plans"
       STAGE: ${{ matrix.stage }}
     secrets:
