--- a/.github/workflows/deploy-azurepolicies.yml
+++ b/.github/workflows/deploy-azurepolicies.yml
@@ -5,7 +5,7 @@ on:
       - main
     paths:
       - 'policies/**'
-      - '.github/workflows/**'
+      - '.github/workflows/deploy-azurepolicies.yml'
       - 'scripts/AzurePolicy.ps1'
   workflow_dispatch:
   pull_request:
@@ -20,6 +20,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+    - name: Check Out
+      uses: actions/checkout@v3
+
     - run: |
         mkdir tmp
       shell: bash
