--- a/.github/workflows/deploy-azurepolicies.yml
+++ b/.github/workflows/deploy-azurepolicies.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Login via Az module
       uses: azure/login@v1
       with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
+        creds: ${{secrets.AZURE_SP}}
         enable-AzPSSession: true 
 
     - name: Run Azure PowerShell script
