testing branch rules

--- a/.github/workflows/deploy-azurepolicies.yml
+++ b/.github/workflows/deploy-azurepolicies.yml
@@ -1,8 +1,8 @@
-name: "Deploy Azure Policies"
+name: "[DEV]Deploy Azure Policies"
 on:
   push:
     branches:
-      - main
+      - dev
     paths:
       - "initiatives/**"
       - "policies/**"
