testing branch rules

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -1,16 +1,8 @@
-
-name: 'Terraform Deploy'
+name: "Terraform Deploy"
 on:
-  push:
+  pull_request:
     branches:
       - main
-    paths:
-      - 'terraform-live/**'
-      - 'terraform-modules/**'
-      - 'policies/**'
-      - '.github/workflows/terraform-deploy.yml'
-  workflow_dispatch:
-  pull_request:
 
 env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
