--- a/.github/workflows/deploy-azurepolicies.yml
+++ b/.github/workflows/deploy-azurepolicies.yml
@@ -18,6 +18,7 @@ env:
 
 jobs:
   deploy:
+    environment: dev
     runs-on: ubuntu-latest
     steps:
       - name: Check Out
@@ -36,6 +37,6 @@ jobs:
       - name: Run Azure PowerShell script
         uses: azure/powershell@v1
         with:
-          inlineScript: ./scripts/AzurePolicy.ps1 -scopeType "subscriptions" -scope "/subscriptions/${{ secrets.ARM_SUBSCRIPTION_ID }}"
+          inlineScript: ./scripts/AzurePolicy.ps1 -scopeType "management-group" -scope "dev-management-group"
           azPSVersion: "latest"
           errorActionPreference: continue
