rollback to subscription only

--- a/.github/workflows/deploy-azurepolicies.yml
+++ b/.github/workflows/deploy-azurepolicies.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Run Azure PowerShell script
         uses: azure/powershell@v1
         with:
-          inlineScript: ./scripts/AzurePolicy.ps1 -scopeType "management-group" -scope "lso-management-group"
+          inlineScript: ./scripts/AzurePolicy.ps1 -scopeType "subscriptions" -scope "/subscriptions/${{ secrets.ARM_SUBSCRIPTION_ID }}"
           azPSVersion: "latest"
           errorActionPreference: continue
